# skeit

./: Justfile  PARTY_DESIGN.md  README.md  chest.py  pyproject.toml  skeit.py  test_party.sh
skeit/: __init__.py  cmd_alias.py  cmd_fff.py  cmd_mb.py  cmd_ms.py  cmd_pff.py  cmd_wc.py  party.py  utils.py
